--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@
         }
         
     
-    @media(max-width: 375px)
+    /* @media(max-width: 375px)
 {
     body{
         background-image: url(b2.jpg);
@@ -162,4 +162,4 @@
     }
     
 }
-
+ */
