--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
         }
         
     }   
-        /* @media(min-width: 1920px)
+ @media(min-width: 1920px)
 {
   
         body{
@@ -74,9 +74,9 @@
         }
         
         .right{
-            background-size:30% 100% ;
+            background-size:30% 110% ;
             width:30%;
-            height: 100%;
+            height: 110%;
             font-family:Arial;
             background-color: rgba(255, 255, 255, 0.479);
             background-attachment: scroll;
@@ -99,8 +99,8 @@
             transform: translate(0%,0%);
             
             
-        }
-    }        */
+        
+    }     
     
     @media(max-width: 375px)
 {
