--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@
             background-color: #33495e;
         }
         .content{
+    
             font-size:45px;
             font-style:italic;
-            width:650px;
-            /* padding:40px; */
+            width:600px;
+            padding:40px;
             position: absolute;
             top:45%;
             left:35%;
@@ -65,7 +66,7 @@
             background-color: #33495e;
         }
         .content{
-        
+            font-size:35px;
             width:300px;
             padding:40px;
             position: absolute;
@@ -104,7 +105,7 @@
         
     }     
     
-    @media(max-width: 375px)
+@media(max-width: 375px)
 {
     body{
         background-image: url(b2.jpg);
@@ -116,13 +117,14 @@
         background-color: #33495e;
     }
     .content{
+        text-align:center;
         font-size:35px;
-        width:300px;
+        width:100px;
         padding:40px;
         position: absolute;
         top:15%;
         left:50%;
-        transform: translate(-100%,-100%);
+        transform: translate(-0%,-00%);
         color:#007799;
     }
     
@@ -165,3 +167,4 @@
     
 }
 
+}
